revice/config-management-file.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample-cm1-file
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
      volumeMounts: 
        - name: config-volume 
          mountPath: /etc/config 
  volumes: 
    - name: config-volume 
      configMap: 
         name: cm-07-file
# also can mount config map as file and use it

---
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample-cm1-file
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
