revice/config-management.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
---
# kubectl get pods
# kubectl exec -it podname -- env  to see environment variables
