revice/config-management2.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
