revice/config-management3.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: sample-cm1
spec: 
  containers: 
    - name: debug
      image: docker.io/rkalluru/debug
      envFrom: # get all env from config map intead one by one
        - configMapRef:
            name: cm-07 
         
# also can mount config map as file and use it
