revice/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        appName: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx:1.14.2
          ports:
           - containerPort: 80
