revice/pod-security-standards.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
  name: psa-pss-test-ns 
  labels: 
     pod-security.kubernetes.io/enforce: privileged # baseline #restricted
     pod-security.kubernetes.io/audit: privileged # baseline #restricted
     pod-security.kubernetes.io/warn: privileged # baseline #restricted
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx-deployment
#   namespace: psa-pss-test-ns 
#   labels:
#     app: nginx
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         appName: nginx
#     spec:
#       containers:
#         - name: nginx
#           image: docker.io/nginx:1.14.2
---
apiVersion: apps/v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: psa-pss-test-ns 
  labels:
    app: nginx
spec:
  containers:
        - name: nginx
          image: docker.io/nginx:1.14.2
          ports: 
            - containerPort: 80 
              hostPort:  32000
