revice/rbac.yaml
apiVersion: v1
kind: Pod 
metadata: 
   name: debug 
   namespace: default 
spec: 
  serviceAccountName: debug
  containers:  
     - name: debug 
       image: docker.io/rkalluru/debug

# kubectl get sa - for service accounts
