revice/taint.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx 
spec: 
  containers: 
    - name: nginx 
      image: docker.io/nginx 
  nodeName: # node name of that which is unschdeuled or not able to schedule
  # it will fail to schdeule if node name exclusively given, if node name not given it will
  # not schdeule on taint node # node name previals over- but node name is ephemeral 
  # taint is bad substance on something - but some thing can tolerate it
  # to taint a node 
  # kubectl taint node node1 key=value1:NoSchedule
   # kubectl taint node node1-name appTypes=databases:NoSchedule
   # if still want to run on tainted node write toleration
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx 
spec: 
  containers: 
    - name: nginx 
      image: docker.io/nginx 
  tolerations: 
    - key: "appTypes" 
      operator: "Exists" # exists or equal
      effect: "NoSchedule" # strict # if to schedule again in any - PreferNoSchedule 
# kubectl taint node node-name appType=web:NoExecute - it 
# prefer no schdeule - soft version - control palane will try to avoid placing the pod
# that does not tolerate the taint on node /but it is not guarenteed - atleast it will try to schedule somewhere
# No execute- this affects pods that are already runniif on node/ pods donot tolerate are evited
#
