revice/headless.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: headless-app
spec: 
  selector: 
    appName: nginx-06-headless
  clusterIP: None
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80
