revice/loadbalancer.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: nginx-lb
spec: 
  type: LoadBalancer
  selector: 
    appName: nginx 
    example: service
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80
