revice/robo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/catalogue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  type: ClusterIP
  selector:
    app: catalogue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/user
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/cart
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - name: shipping
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/shipping
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
spec:
  type: ClusterIP
  selector:
    app: shipping
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: public.ecr.aws/w8x4g9h7/roboshop-v3/payment
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
