revice/service.yml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx 
  labels: 
    appName: nginx 
    example: service
spec: 
  containers: 
    - name: nginx 
      image: docker.io/nginx
---
apiVersion: v1 
kind: Service
metadata: 
  name: nginx 
spec: 
  selector: 
    appName: nginx 
    example: service
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80 
# --- 
# apiVersion: v1 
# kind: Pod 
# metadata: 
#   name: debug-pod
# spec: 
#   containers: 
#     - name: debug 
#       image: docker.io/rkalluru/debug

# debug :inside debug container: kubectl exec -it debug-name -- bash 
# inside curl nginx-pod-name , or also use dns  curl nginx-podname.namespace.svc.cluster.local
