revice/network-policy.yaml
--- # only work with network plugin installed |eks network policy standard
apiVersion: v1 # namespace 
kind: Namespace 
metadata: 
   name: backend
   labels: 
     project: demo
---
apiVersion: v1 # namespace 
kind: Namespace 
metadata: 
   name: frontend 
   labels: 
     project: demo
---
apiVersion: v1 
kind: Service
metadata: 
  name: backend
  namespace: backend
spec: 
  type: ClusterIP
  selector: 
    appType: API
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: debug
  namespace: frontend
  labels: 
    appType: UI
spec: 
  containers: 
     - name: debug 
       image: docker.io/rkalluru/debug 
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx
  namespace: backend 
  labels: 
    appType: API
spec: 
  containers: 
     - name: nginx 
       image: docker.io/nginx 
---
# writing exclusive network policy
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:  
  name: allow-frontend-only # allowing only frontend to backend
  namespace: backend  # going to apply over backend
spec: 
  podSelector: # if to allow to  every pod -{} 
     matchLabels:  # to whom it should be applied
       appType: API 
  policyTypes: 
    - Ingress 
    - Egress 
  ingress:  # incoming traffic from ?
    - from: 
       - namespaceSelector: # only from specific namespace allowed
          matchLabels: 
             project: demo
       - podSelector: 
           matchLabels:
             appType: UI # UI only is ok
      ports: # and from port 80 is ok
        - protocol: TCP
          port: 80


  egress: #outside traffic allow all 
   - {}
